--- a/css.css
+++ b/css.css
@@ -8,7 +8,7 @@
 }
 .anim-rev{
 	animation: typewriterrev 1s steps(7) 1s 1 normal both,
-			   cursor 700ms steps(44) infinite normal;
+			   cursor 900ms steps(44) infinite normal;
 }
 @keyframes type{
 	to{width: 0;}
@@ -19,22 +19,23 @@
 	to{width: 3.8em;}
 }
 @keyframes cursor{
-	to{border-right-color: rgba(0,0,0,.75);}
-	from{border-right-color: transparent;}
+	0%{border-right-color: rgba(0,0,0,.75);}
+	50%{border-right-color: transparent;}
+	100%{border-right-color: rgba(0,0,0,.75);}
 }
 .cur{
+	padding-right: 2px;
 	width: 6em;
 	border-right: 2px solid rgba(0,0,0,.75);
-	font-size: 180%;
 	white-space: nowrap;
 	overflow: hidden;
 	color: orange;
 }
 .static{
-	font-size: 180%;
 	color: black;
 	margin-left: 5px
 }
 span{
 	display: flex;
+	font-size: 180%;
 }
